--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@mdi/font": "^4.5.95",
+    "@nuxtjs/auth": "^4.8.4",
+    "@nuxtjs/axios": "^5.8.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
